tests/ui/suggestions/derive-clone-for-eq.stderr
error[E0277]: the trait bound `T: Clone` is not satisfied
  --> $DIR/derive-clone-for-eq.rs:6:17
   |
LL | #[derive(Clone, Eq)]
   |                 ^^ the trait `Clone` is not implemented for `T`
   |
note: required for `Struct<T>` to implement `PartialEq`
  --> $DIR/derive-clone-for-eq.rs:9:19
   |
LL | impl<T: Clone, U> PartialEq<U> for Struct<T>
   |         -----     ^^^^^^^^^^^^     ^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `Eq`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   = note: this error originates in the derive macro `Eq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
LL | pub struct Struct<T: std::clone::Clone>(T);
   |                    +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
